[gd_scene load_steps=4 format=3 uid="uid://bbebvg0rfmuux"]

[ext_resource type="Script" path="res://editor/controls/dockers/workspace_docker/c_dynamic_context_docker/dynamic_context_controls/select_atoms_by_type.gd" id="1_q6llw"]
[ext_resource type="PackedScene" path="res://editor/controls/dockers/workspace_docker/a_create_docker/controls/compact_element_picker.tscn" id="2_ewc0k"]
[ext_resource type="Texture2D" uid="uid://j7w8vi2xwru3" path="res://editor/controls/menu_bar/menu_edit/icons/icon_delete.svg" id="3_wcwr3"]

[node name="SelectByAtomTypes" type="VBoxContainer"]
offset_left = 5.0
offset_top = 5.0
offset_right = 219.0
offset_bottom = 375.0
size_flags_vertical = 0
theme_override_constants/separation = 20
script = ExtResource("1_q6llw")

[node name="ElementPicker" parent="." instance=ExtResource("2_ewc0k")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4

[node name="Tree" type="Tree" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 2
hide_root = true
scroll_horizontal_enabled = false
scroll_vertical_enabled = false

[node name="ButtonClearFilters" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Remove Selection Filters"
icon = ExtResource("3_wcwr3")

[node name="ButtonSelect" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Select"

[node name="ButtonAddToSelection" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Add to Current Selection"
